# nerw-rpc

./: .mcp.json  Cargo.toml  README.md  clippy.toml
src/: client.rs  codec.rs  context.rs  datagram.rs  error.rs  lib.rs  method.rs  schema.rs  server.rs  streaming.rs  transit.rs  transport.rs  wire.rs  wire_error.rs
tests/: streaming_echo.rs  transport_roundtrip.rs
wit/: nerw-rpc.wit
