[package]
name = "nerw-rpc"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Mesh-agnostic RPC framework over iroh with WIT contracts + postcard wire format"
repository = "https://github.com/nerwsys/nerw-rpc"
documentation = "https://docs.rs/nerw-rpc"
readme = "README.md"
keywords = ["rpc", "mesh", "iroh", "p2p", "wit"]
categories = ["network-programming", "asynchronous"]

[dependencies]
postcard = { version = "1.0", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "io-util", "time"] }
thiserror = "1.0"
bytes = "1.5"
tracing = "0.1"
leb128 = "0.2"
uuid = { version = "1.7", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
serde_test = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
